--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ torchvision>=0.8.1,!=0.13.0
 tqdm>=4.41.0
 protobuf<4.21.3
 ultralytics>=8.0.55
+supervision==0.1.0
 
 # Logging -------------------------------------
 tensorboard>=2.4.1
