--- a/requirements.txt
+++ b/requirements.txt
@@ -26,14 +26,14 @@ pandas>=1.1.4
 seaborn>=0.11.0
 
 # Export --------------------------------------
-# coremltools>=4.1  # CoreML export
-# onnx>=1.9.0  # ONNX export
-# onnx-simplifier>=0.3.6  # ONNX simplifier
-# scikit-learn==0.19.2  # CoreML quantization
+coremltools>=4.1  # CoreML export
+onnx>=1.9.0  # ONNX export
+onnxsim>=0.3.6  # ONNX simplifier
+scikit-learn>=0.19.2  # CoreML quantization
 # tensorflow>=2.4.1  # TFLite export
 # tensorflowjs>=3.9.0  # TF.js export
-# nvidia-pyindex            # TensorRT export
-# nvidia-tensorrt           # TensorRT export
+# pycuda  # TensorRT export
+# tensorrt  # TensorRT export
 # openvino-dev  # OpenVINO export
 
 # Extras --------------------------------------
