--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,8 @@ seaborn>=0.11.0
 
 # Export --------------------------------------
 coremltools>=4.1  # CoreML export
-onnx>=1.9.0  # ONNX export
+onnx>=1.12.0  # ONNX export
+onnxruntime>=1.14.1
 onnxsim>=0.3.6  # ONNX simplifier
 scikit-learn>=0.19.2  # CoreML quantization
 # tensorflow>=2.4.1  # TFLite export
